--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,43 +24,31 @@
         android:src="@drawable/ic_baseline_share_location_24"/>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/roundbutton"
-        android:layout_marginLeft="80dp"
-        android:layout_marginRight="80dp">
-
-        <EditText
-            android:id="@+id/Login_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="ID를 입력하세요"
-            android:textSize="15dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
-
-    </LinearLayout>
+    <EditText
+        android:id="@+id/Login_id"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:hint=" ID를 입력하세요"
+        android:textSize="15dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:singleLine="true"
+        android:imeOptions="actionNext"
+        android:background="@drawable/roundbutton"/>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/roundbutton"
-        android:layout_marginLeft="80dp"
-        android:layout_marginRight="80dp"
-        android:layout_marginTop="10dp">
-        <EditText
-            android:id="@+id/Login_pw"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:hint="PW를 입력하세요"
-            android:textSize="15dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
-    </LinearLayout>
+    <EditText
+        android:id="@+id/Login_pw"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:hint=" PW를 입력하세요"
+        android:textSize="15dp"
+        android:inputType="textPassword"
+        android:singleLine="true"
+        android:imeOptions="actionDone"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/roundbutton" />
 
 
 
