--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -21,6 +21,14 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="27dp"
             />
+        <Button
+            android:id="@+id/gpsset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="현재위치 집으로 설정"
+            android:layout_centerHorizontal="true"
+
+            />
 
 
     </LinearLayout>
