--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -19,6 +19,7 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="아이디"
+            android:textColor="@color/black"
             android:textSize="20sp">
         </TextView>
 
@@ -50,7 +51,7 @@
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="이름"
+            android:text="보호자 이름"
             android:textSize="20sp">
         </TextView>
 
@@ -70,6 +71,39 @@
                 android:layout_marginLeft="10dp"
 
                 android:textColor="@color/black" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="집 주소"
+            android:textSize="20sp">
+        </TextView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:gravity="center"
+            android:background="@drawable/roundbutton2"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="80dp">
+
+            <TextView
+                android:id="@+id/Mypage_home"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/black"
+                />
         </LinearLayout>
 
     </LinearLayout>
@@ -107,6 +141,72 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="설정 범위"
+            android:textSize="20sp">
+        </TextView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:gravity="center"
+            android:background="@drawable/roundbutton2"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="80dp">
+
+            <TextView
+                android:id="@+id/Mypage_range"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="200m"
+                android:textColor="@color/black"
+                />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="복귀 시간"
+            android:textSize="20sp">
+        </TextView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:gravity="center"
+            android:background="@drawable/roundbutton2"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="80dp">
+
+            <TextView
+                android:id="@+id/Mypage_time"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/black"
+                android:text="19:00" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 
 
