--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -19,16 +19,21 @@
             android:layout_height="wrap_content"
             android:text="알람 설정"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="27dp"
-            />
+            android:layout_marginTop="27dp" />
         <Button
             android:id="@+id/gpsset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="현재위치 집으로 설정"
+            android:layout_centerHorizontal="true" />
+        <Button
+            android:id="@+id/return_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="복귀 시간 설정"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="27dp" />
 
-            />
 
 
     </LinearLayout>
