--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,12 +19,12 @@
 
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_gravity="center"
         android:src="@drawable/mainicon"
-
-        />
+        android:layout_marginBottom="10dp"
+         />
 
     <LinearLayout
         android:layout_width="match_parent"
