--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -90,13 +90,14 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="집 주소"
+            android:layout_marginTop="10dp"
             android:textColor="@color/black"
             android:textSize="21sp">
         </TextView>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="50dp"
             android:gravity="center"
             android:background="@drawable/roundbutton2"
             android:layout_marginLeft="25dp"
@@ -104,13 +105,12 @@
 
             <TextView
                 android:id="@+id/Mypage_home"
-                android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
                 android:textColor="@color/black"
-                android:textSize="23sp"
-                />
+                android:textSize="18sp" />
         </LinearLayout>
 
     </LinearLayout>
@@ -127,7 +127,7 @@
             android:layout_height="wrap_content"
             android:text="비상 연락처"
             android:textColor="@color/black"
-            android:textSize="22sp">
+            android:textSize="21sp">
         </TextView>
 
         <LinearLayout
@@ -218,8 +218,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:textColor="@color/black"
-                android:textSize="23sp"
-                android:text="19:00" />
+                android:textSize="23sp" />
         </LinearLayout>
 
     </LinearLayout>
