--- a/app/src/main/res/layout/fragment_homegps.xml
+++ b/app/src/main/res/layout/fragment_homegps.xml
@@ -16,13 +16,16 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
+           android:textSize="20sp"
            android:text="진짜 등록하시겠습니까?"/>
-        <Button
+        <TextView
             android:id="@+id/btn_gpssave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/roundbutton"
             android:layout_gravity="center"
-            android:text="등록"/>
+            android:textSize="20sp"
+            android:text="  등록  "/>
 
     </LinearLayout>
 </LinearLayout>
