--- a/app/src/main/res/drawable/roundbutton.xml
+++ b/app/src/main/res/drawable/roundbutton.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item> <shape android:shape="rectangle">
-        <corners android:radius="100dp"/>
-        <solid android:color="#ffffff"/>
+        <corners android:radius="10dp"/>
+        <solid android:color="#5B9BD5"/>
         <stroke
-           android:color="#FBFBFB"
+           android:color="#203864"
             android:width="3dp"/>
 
     </shape>
