--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -10,7 +10,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_gravity="center">
+
 
 
         <TextView
@@ -35,12 +37,16 @@
             android:layout_marginRight="10dp"
             android:textColor="@color/black" />
 
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="확인"
+            android:text="  확인  "
+            android:textSize="20sp"
+            android:background="@drawable/roundbutton"
             android:layout_gravity="center"
-            android:onClick="check"/>
+            android:clickable="true"
+            android:onClick="check"
+            android:focusable="true" />
 
     </LinearLayout>
 
